tests/ui/traits/object/supertrait-assoc-type-bounds-dyn.next.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/supertrait-assoc-type-bounds-dyn.rs:14:16
   |
LL | fn use_dyn(_: &dyn Sub<Assoc = String>) {}
   |                ^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `String`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
